--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -1,3 +1,48 @@
+/* src/styles/globals.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
+
+body {
+  @apply bg-gray-100;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  @apply px-4 sm:px-6 lg:px-8;
+}
+
+.input {
+  @apply border p-2 rounded-md w-full;
+}
+
+.btn {
+  @apply py-2 px-4 rounded-md text-white;
+}
+
+.btn-primary {
+  @apply bg-blue-500 hover:bg-blue-600;
+}
+
+.btn-secondary {
+  @apply bg-gray-500 hover:bg-gray-600;
+}
+
+.btn-edit {
+  @apply bg-yellow-500 hover:bg-yellow-600;
+}
+
+.btn-delete {
+  @apply bg-red-500 hover:bg-red-600;
+}
+
+.placeholder {
+  @apply p-4 bg-white border rounded-md shadow-md;
+}
+
+body {
+  padding-top: 4rem; /* Adjust based on the Navbar height */
+}
